blg438e/Deney0/C5515_Support_Files/C5515_Lib/dsplib_2.40.00/EXAMPLES/neg/t2.h
/* This is a test for neg: tst2 */
#define NX 4
#define FNAME "t2"
#define MAXERROR 10

DATA x[NX] ={
3276,
-32768,
32767,
9830,
};

DATA rtest[NX] ={
-3277,
32767,
-32768,
-9830,
};

DATA r[NX]; 
